# MSOT_Diffusion

./: .gitignore  .gitmodules  MSOT_diffusion_env.yaml  README.md  Spaced_diffusion_run_model.py  UNet_training_func.py  UNet_training_steps.py  Unet_lightning_wrapper.py  clone_and_run_msot_diffusion.py  dataloader.py  dateloader.py  diffusion_schedulers.py  epoch_steps.py  fix_masks.py  image_viewer.py  inference_sweep.py  main.py  phema_sweep.py  preprocess.py  preprocess_synthetic_data.py  pyproject.toml  pytorch_datasets.py  pytorch_utils.py  requirements.txt  run_DBIM.py  run_DDIM.py  run_DDPM.py  run_UNet.py  run_Unet.py  run_VAE.py  run_VQVAE.py  run_model.py  submit_slurm_experiments.py  trace_model.ipynb  train_DDPM.py  train_Unet.py  train_VAE.py  train_autoencoder.py  train_diffusion.py  utility_classes.py  (+2 more)
end_to_end_phantom_QPAT/: train_network_on_experiment.py
end_to_end_phantom_QPAT/utils/: data_loading.py  networks.py
figures_and_tables/: compare_loss_curves.py  compute_outputs.py  get_wandb_runs.py  make_box_plots.py  make_latex_table.py  plot_examples.py  plot_loss_curves.py  plot_test_sample.py  wandb_api_to_table.ipynb  wandb_api_to_table.py  wandb_csv_to_table.py
lightning_modules/: Unet_lightning_wrapper.py  lightning_VAE.py
nn_modules/: AutoEncoders.py  DiT.py  nn_blocks.py  swin_unet.py  time_conditioned_residual_unet.py
vq_vae/: conv_vae.py  vq_vae.py
